--- a/Temas/Tema4_Matplotlib.ipynb
+++ b/Temas/Tema4_Matplotlib.ipynb
@@ -1207,7 +1207,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El argumento <code>markeredgecolor<code> se puede utilizar junto con el argumento marker para personalizar el color del borde de los marcadores. Al igual que con <code>markerfacecolor<code>, puedes utilizar diferentes formas de especificar el color."
+    "El argumento <code>markeredgecolor</code> se puede utilizar junto con el argumento marker para personalizar el color del borde de los marcadores. Al igual que con <code>markerfacecolor</code>, puedes utilizar diferentes formas de especificar el color."
    ]
   },
   {
@@ -1239,7 +1239,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El argumento <code>alpha<code> en la función <code>plt.plot()<code> de Matplotlib se utiliza para controlar la transparencia de la línea o los marcadores en un gráfico. Permite ajustar la opacidad de los elementos trazos, donde un valor de alpha menor a 1 los hará más transparentes y un valor de 1 los hará completamente opacos."
+    "El argumento <code>alpha</code> en la función <code>plt.plot()</code> de Matplotlib se utiliza para controlar la transparencia de la línea o los marcadores en un gráfico. Permite ajustar la opacidad de los elementos trazos, donde un valor de alpha menor a 1 los hará más transparentes y un valor de 1 los hará completamente opacos."
    ]
   },
   {
@@ -1271,7 +1271,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Los arguentos <code>scalex</code> y <code>scaley</code>  de <code>plt.plot()</code> en Matplotlib se utilizan para controlar si el eje x o eje y respectivamente del gráfico se escalan automáticamente según los datos proporcionados o si se mantienen fijos.\n",
+    "Los arguentos <code>scalex</code> y <code>scaley</code>  de <code>plt.plot()</code> en Matplotlib controlan si matplotlib ajusta automáticamente los límites de los ejes $X$ e $Y$ según los datos proporcionados. Se utilizan para controlar si el eje $X$ o eje $Y$ respectivamente del gráfico se escalan automáticamente según los datos proporcionados o si se mantienen fijos.\n",
     "\n",
     "* **scalex:** Este argumento se utiliza para controlar el escalado del eje x del gráfico. Acepta dos posibles valores:\n",
     "  * **True:** (valor predeterminado): Permite el escalado automático del eje x en función de los datos proporcionados. Los valores de x se ajustarán automáticamente al rango del gráfico.\n",
@@ -1307,6 +1307,17 @@
    "metadata": {},
    "source": [
     "Con una escala logarítmica en el eje x, los valores se distribuyen en una escala logarítmica, lo que puede ser útil cuando los datos abarcan un amplio rango y se desean resaltar diferencias en los valores más pequeños."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Observaciones:**\n",
+    "\n",
+    "* Se usan raramente porque están activados por defecto.\n",
+    "\n",
+    "* Son útiles cuando quieres tener control absoluto sobre los límites de los ejes y evitar que matplotlib los ajuste automáticamente."
    ]
   },
   {
@@ -1437,31 +1448,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# Definir los datos de ejemplo\n",
-    "x = [1, 2, 3, 4, 5]\n",
-    "y = [2, 4, 6, 8, 10]\n",
-    "labels = ['Punto 1', 'Punto 2', 'Punto 3', 'Punto 4', 'Punto 5']\n",
-    "\n",
-    "# Graficar los puntos\n",
-    "plt.plot(x,y)\n",
-    "plt.scatter(x, y)\n",
-    "\n",
-    "# Agregar texto a cada punto\n",
-    "for i in range(len(x)):\n",
-    "    plt.text(x[i], y[i], labels[i], fontsize=12, ha='center', va='bottom')\n",
-    "\n",
-    "# Mostrar la gráfica\n",
-    "plt.show()\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1472,7 +1458,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<table>\n",
+    "<center><table>\n",
     "  <tr>\n",
     "    <th>Argumento</th>\n",
     "    <th>Descripción</th>\n",
@@ -1533,7 +1519,40 @@
     "    <td>Opacidad del texto</td>\n",
     "    <td>plt.text(3, 6, 'Punto de interés', alpha=0.5)</td>\n",
     "  </tr>\n",
-    "</table>\n"
+    "</table>\n",
+    "</center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejemplo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Definir los datos de ejemplo\n",
+    "x = [1, 2, 3, 4, 5]\n",
+    "y = [2, 4, 6, 8, 10]\n",
+    "labels = ['Punto 1', 'Punto 2', 'Punto 3', 'Punto 4', 'Punto 5']\n",
+    "\n",
+    "# Graficar los puntos\n",
+    "plt.plot(x,y)\n",
+    "plt.scatter(x, y)\n",
+    "\n",
+    "# Agregar texto a cada punto\n",
+    "for i in range(len(x)):\n",
+    "    plt.text(x[i], y[i], labels[i], fontsize=12, ha='center', va='bottom')\n",
+    "\n",
+    "# Mostrar la gráfica\n",
+    "plt.show()\n"
    ]
   },
   {
@@ -1631,6 +1650,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Ejemplo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import math\n",
+    "\n",
+    "\n",
+    "x = np.arange(-2*math.pi, 2*math.pi, 0.1)  \n",
+    "y = np.sin(x)  # Función exponencial: e^x\n",
+    "\n",
+    "\n",
+    "plt.plot(x, y, color='purple', linewidth=1, label='f(x) = sin(x)')\n",
+    "\n",
+    "\n",
+    "plt.xlabel('Eje X',fontsize=12,color='blue',labelpad=10,loc='center',fontweight='bold')\n",
+    "plt.ylabel('f(x) = Sin(x)',fontsize=12,color='green',labelpad=10,loc='center',fontstyle='italic')\n",
+    "\n",
+    "plt.title('Gráfica de la Función Exponencial', fontsize=12, fontweight='bold')\n",
+    "plt.legend()\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La función `plt.tight_layout()` ajusta automáticamente los márgenes y espacios entre los elementos de una figura de Matplotlib (como ejes, títulos, etiquetas y ticks) para que nada se sobreponga o quede cortado al visualizar o guardar la imagen."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Función <code>plt.grid()</code>"
    ]
   },
@@ -1648,28 +1708,68 @@
     "<center>\n",
     "<table>\n",
     "  <tr>\n",
-    "    <th>Valor</th>\n",
+    "    <th>Argumento</th>\n",
     "    <th>Descripción</th>\n",
+    "    <th>Posibles Valores</th>\n",
+    "    <th>Ejemplo</th>\n",
     "  </tr>\n",
     "  <tr>\n",
-    "    <td>True</td>\n",
-    "    <td>Muestra la cuadrícula en el fondo del gráfico.</td>\n",
+    "    <td>boolean</td>\n",
+    "    <td>Activa o desactiva la cuadrícula.</td>\n",
+    "    <td>True, False</td>\n",
+    "    <td>plt.grid(True)</td>\n",
     "  </tr>\n",
     "  <tr>\n",
-    "    <td>False</td>\n",
-    "    <td>No muestra la cuadrícula.</td>\n",
+    "    <td>which</td>\n",
+    "    <td>Define si la cuadrícula se aplica a marcas mayores, menores o ambas.</td>\n",
+    "    <td>'major', 'minor', 'both'</td>\n",
+    "    <td>plt.grid(True, which='both')</td>\n",
     "  </tr>\n",
     "  <tr>\n",
-    "    <td>'major'</td>\n",
-    "    <td>Muestra la cuadrícula solo en las ubicaciones de las marcas principales en los ejes.</td>\n",
+    "    <td>axis</td>\n",
+    "    <td>Indica en qué eje se muestra la cuadrícula.</td>\n",
+    "    <td>'both', 'x', 'y'</td>\n",
+    "    <td>plt.grid(True, axis='y')</td>\n",
     "  </tr>\n",
     "  <tr>\n",
-    "    <td>'minor'</td>\n",
-    "    <td>Muestra la cuadrícula solo en las ubicaciones de las marcas menores en los ejes.</td>\n",
+    "    <td>color</td>\n",
+    "    <td>Color de las líneas de la cuadrícula.</td>\n",
+    "    <td>Nombre del color o código hexadecimal</td>\n",
+    "    <td>plt.grid(True, color='gray')</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td>linestyle / ls</td>\n",
+    "    <td>Estilo de línea de la cuadrícula.</td>\n",
+    "    <td>'-', '--', ':', '-.'</td>\n",
+    "    <td>plt.grid(True, linestyle='--')</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td>linewidth / lw</td>\n",
+    "    <td>Grosor de las líneas de la cuadrícula.</td>\n",
+    "    <td>Valor numérico (por ejemplo, 0.5, 1.0)</td>\n",
+    "    <td>plt.grid(True, linewidth=0.5)</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td>alpha</td>\n",
+    "    <td>Transparencia de la cuadrícula.</td>\n",
+    "    <td>Valor entre 0 (transparente) y 1 (opaco)</td>\n",
+    "    <td>plt.grid(True, alpha=0.3)</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td>visible</td>\n",
+    "    <td>Alternativa moderna a <code>b</code> para mostrar u ocultar la cuadrícula.</td>\n",
+    "    <td>True, False</td>\n",
+    "    <td>plt.grid(visible=True)</td>\n",
     "  </tr>\n",
     "</table>\n",
-    "\n",
-    "</center>"
+    "</center>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejemplo"
    ]
   },
   {
@@ -1688,7 +1788,8 @@
     "plt.plot(x, -1*y, linewidth=0.5, color='#FF0000', marker = '*',markersize = 20, markerfacecolor='cyan',markeredgecolor = 'g', alpha = 0.75, label = '$y=-x$' )\n",
     "plt.title(\"Mi gráfica\", fontsize = 30, color = 'tomato', pad = 10)\n",
     "plt.legend(title = 'Mi titulo', shadow = True, borderaxespad = 0.5, frameon = True, fontsize = 10 )\n",
-    "plt.grid()\n",
+    "plt.minorticks_on() # Activa marcas menores. Se debe activar manualmente\n",
+    "plt.grid('both', which='minor',color='blue',alpha=0.1, axis='both', linestyle='--')\n",
     "plt.show()"
    ]
   },
@@ -1702,16 +1803,26 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "Los argumentos <code>plt.xticks()</code> y <code>plt.yticks()</code> de Matplotlib se utilizan para personalizar las marcas y etiquetas en los ejes x e y de un gráfico respectivamente. Estas funciones permiten controlar las posiciones y los textos de las marcas en los ejes para mejorar la legibilidad y la presentación de los datos."
+    "Los las funciones <code>plt.xticks()</code> y <code>plt.yticks()</code> de Matplotlib permiten personalizar las marcas (ticks) y sus etiquetas en los ejes X e Y de una gráfica respectivamente. Estas funciones permiten controlar las posiciones y los textos de las marcas en los ejes para mejorar la legibilidad y la presentación de los datos."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Los argumentos opcionales que se pueden utilizar con las funciones plt.xticks() y plt.yticks() en Matplotlib permiten personalizar aún más las marcas y etiquetas en los ejes x e y de un gráfico:\n",
-    "\n",
+    "Los argumentos opcionales que se pueden utilizar con las funciones plt.xticks() y plt.yticks() en Matplotlib permiten personalizar aún más las marcas y etiquetas en los ejes x e y de un gráfico:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<center>\n",
     "<table>\n",
     "  <thead>\n",
@@ -1722,6 +1833,11 @@
     "    </tr>\n",
     "  </thead>\n",
     "  <tbody>\n",
+    "    <tr>\n",
+    "      <td>ticks</td>\n",
+    "      <td>Ubicaciones específicas donde se colocan las marcas</td>\n",
+    "      <td>plt.xticks([0, 1, 2, 3])</td>\n",
+    "    </tr>\n",
     "    <tr>\n",
     "      <td>labels</td>\n",
     "      <td>Etiquetas personalizadas para las marcas</td>\n",
@@ -1759,8 +1875,14 @@
     "    </tr>\n",
     "  </tbody>\n",
     "</table>\n",
-    "\n",
-    "</center>"
+    "</center>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejemplo"
    ]
   },
   {
@@ -1778,7 +1900,77 @@
     "plt.grid()\n",
     "plt.xticks(x, ['aaaaaaa', 'b', 'c','d','e'], rotation = 90)\n",
     "plt.yticks(y, ['f(a)','f(b)','f(c)','f(d)','f(e)'])\n",
+    "plt.grid(which='major')\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejemplo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "x = np.arange(1, 11)\n",
+    "y = 2*x + 1\n",
+    "\n",
+    "plt.plot(x, y)\n",
+    "\n",
+    "# Mostrar ticks de 1 en 1 \n",
+    "plt.xticks(np.arange(min(x), max(x)+1, 1), fontsize=8)\n",
+    "plt.yticks(np.arange(min(y), max(y)+1, 1), fontsize=8)\n",
+    "plt.grid(True, which='major')\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejemplo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Datos\n",
+    "x = [0, 1, 2, 3]\n",
+    "y = [10, 20, 25, 30]\n",
+    "\n",
+    "\n",
+    "plt.plot(x, y, marker='o')\n",
+    "\n",
+    "# Personalizar ticks del eje X y eje Y\n",
+    "plt.xticks(ticks=[0, 1, 2, 3],labels=['Enero', 'Febrero', 'Marzo', 'Abril'],rotation=45,fontsize=12,color='blue',alpha=0.8,verticalalignment='top')\n",
+    "plt.yticks(ticks=[10, 20, 25, 30],labels=['Bajo', 'Medio', 'Alto', 'Muy Alto'],rotation=0,fontsize=10,color='green',alpha=0.9,horizontalalignment='right')\n",
+    "\n",
+    "plt.title('Utilizando Ticks')\n",
+    "plt.xlabel('Eje X')\n",
+    "plt.ylabel('Eje Y')\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La función `plt.tight_layout()` ajusta automáticamente los márgenes y espacios entre los elementos de una figura de Matplotlib (como ejes, títulos, etiquetas y ticks) para que nada se sobreponga o quede cortado al visualizar o guardar la imagen."
    ]
   },
   {
@@ -1861,6 +2053,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejemplo"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1881,6 +2080,13 @@
     "plt.legend()\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejemplo"
    ]
   },
   {
@@ -1971,8 +2177,14 @@
     "    <td>label = 'Líneas horizontales'</td>\n",
     "  </tr>\n",
     "</table>\n",
-    "\n",
-    "</center>"
+    "</center>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejemplo"
    ]
   },
   {
@@ -2134,6 +2346,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejemplo"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -2282,6 +2501,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejemplo"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -2303,6 +2529,13 @@
     "plt.title('Gráfico con Anotación')\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejemplo"
    ]
   },
   {
@@ -2332,6 +2565,13 @@
     "plt.title('Gráfico con Anotación Personalizada')\n",
     "\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejemplo"
    ]
   },
   {
