--- a/Temas/Tema7_Pandas.ipynb
+++ b/Temas/Tema7_Pandas.ipynb
@@ -539,6 +539,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "plt.plot(serie_precios.index, serie_precios.values)\n",
+    "plt.show()"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -551,7 +563,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Los operadores binarios (`+`, `*`, `/`, etc.) pueden utilizarse con una serie, y devuelven otra serie con el resultado de aplicar la operación a cada elemento de la serie."
+    "Los operadores binarios (`+`, `*`, `/`, etc.) pueden utilizarse con una serie, y **devuelven otra serie con el resultado de aplicar la operación a cada elemento de la serie**."
    ]
   },
   {
@@ -562,8 +574,8 @@
    "source": [
     "import pandas as pd\n",
     "s = pd.Series([1, 2, 3, 4])\n",
-    "#s\n",
-    "s * 2"
+    "print(s)\n",
+    "print(s * 2)"
    ]
   },
   {
@@ -574,7 +586,7 @@
    "source": [
     "s = pd.Series([1, 2, 3, 4])\n",
     "t = s % 2\n",
-    "t"
+    "print(t)"
    ]
   },
   {
@@ -584,7 +596,7 @@
    "outputs": [],
    "source": [
     "s = pd.Series(['a', 'b', 'c'])\n",
-    "s * 5"
+    "print(s * 5)"
    ]
   },
   {
@@ -653,6 +665,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`None:` Es un objeto nativo de Python que representa ausencia de valor o \"nada\".\n",
+    "\n",
+    "`NaN`: significa \"*Not a Number*\". Es un valor especial usado para representar datos numéricos faltantes o indefinidos. En pandas, es el valor estándar para denotar datos perdidos en objetos numéricos."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -669,7 +690,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s.dropna()"
+    "print(s.dropna())"
    ]
   },
   {
