--- a/Temas/Tema7_Pandas.ipynb
+++ b/Temas/Tema7_Pandas.ipynb
@@ -698,7 +698,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Función `any`"
+    "## Funciones  `any` y `all`"
    ]
   },
   {
@@ -718,13 +718,13 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "# Crear una Serie con valores incluyendo NaN\n",
+    "#Crea una Serie con valores incluyendo NaN\n",
     "serie = pd.Series([1, 2, np.nan, 4, 5])\n",
     "\n",
-    "# Verificar si al menos un valor faltante está presente en la Serie\n",
+    "# Verifica si al menos un valor faltante está presente en la Serie\n",
     "resultado = serie.isna().any()\n",
     "print(resultado)\n",
-    "# Salida: True\n"
+    "\n"
    ]
   },
   {
