--- a/Temas/Tema7_Pandas.ipynb
+++ b/Temas/Tema7_Pandas.ipynb
@@ -702,11 +702,12 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La función `any()` en Pandas se utiliza para verificar si al menos un elemento de una serie es verdadero. Devuelve `True` si al menos un elemento es verdadero y `False` si todos los elementos son falsos."
+    "* `all()`: Devuelve `True` si todos los elementos de la serie son verdaderos.\n",
+    "  \n",
+    "* `any()`: Devuelve `True` si al menos un elemento de la serie es verdadero."
    ]
   },
   {
