--- a/Temas/Tema7_Pandas.ipynb
+++ b/Temas/Tema7_Pandas.ipynb
@@ -711,30 +711,41 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "\n",
-    "#Crea una Serie con valores incluyendo NaN\n",
-    "serie = pd.Series([1, 2, np.nan, 4, 5])\n",
-    "\n",
-    "# Verifica si al menos un valor faltante está presente en la Serie\n",
-    "resultado = serie.isna().any()\n",
-    "print(resultado)\n",
-    "\n"
+    "### Ejemplo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "¿Hay valores nulos?: True\n"
+     ]
+    }
+   ],
    "source": [
-    "serie.isna()"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "#Crea una Serie con valores nulos\n",
+    "serie = pd.Series([1, 2, np.nan, 4, 5, None])\n",
+    "\n",
+    "resultado = serie.isna().any()\n",
+    "print(\"¿Hay valores nulos?:\",resultado)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejemplo"
    ]
   },
   {
@@ -761,6 +772,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejemplo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "¿Todos respondieron 'Sí'?: False\n",
+      "¿Alguien dijo 'No'?: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = pd.Series(['Sí', 'No', 'Sí', 'Sí'])\n",
+    "\n",
+    "\n",
+    "serie_si = (s == 'Sí').all()\n",
+    "print(\"¿Todos respondieron 'Sí'?:\", serie_si)  \n",
+    "\n",
+    "serie_no = (s == 'No').any()\n",
+    "print(\"¿Alguien dijo 'No'?:\", serie_no) \n"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -778,6 +821,13 @@
     "<center><code>s.apply(f)</code></center>\n",
     "\n",
     "Devuelve una serie con el resultado de aplicar la función `f` a cada uno de los elementos de la serie `s`.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejemplo"
    ]
   },
   {
@@ -805,6 +855,76 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejemplo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Primer Parcial      Aprobado\n",
+      "Segundo Parcial     Aprobado\n",
+      "Tercer Parcial      Aprobado\n",
+      "Ordinario          Reprobado\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = pd.Series([7, 8.5, 9.2, 4.0], index =['Primer Parcial', 'Segundo Parcial', 'Tercer Parcial', 'Ordinario'] )\n",
+    "\n",
+    "#print(s)\n",
+    "\n",
+    "\n",
+    "def calificar(calificacion):\n",
+    "    if calificacion >= 6:\n",
+    "        return 'Aprobado'\n",
+    "    else:\n",
+    "        return 'Reprobado'\n",
+    "\n",
+    "print(s.apply(calificar))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejemplo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0        Ana\n",
+      "1       Juan\n",
+      "2     Carlos\n",
+      "3    Rodolfo\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "nombres = pd.Series(['ana', 'JUAN', 'Carlos', 'RoDolFo'])\n",
+    "\n",
+    "nombres_mayus = nombres.apply(lambda x: x.capitalize())\n",
+    "print(nombres_mayus)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -825,14 +945,105 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejemplo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matemáticas     6.0\n",
+      "Economía        9.5\n",
+      "Programación    8.0\n",
+      "Cálculo         7.5\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "s = pd.Series({'Matemáticas': 6.0,  'Economía': 9.5, 'Programación': 8, 'Cálculo': 7.5})\n",
+    "print(s[s >= 6])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Economía    9.5\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(s[(s > 8) & (s <= 10)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Programación    8.0\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(s[s == 8])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejemplo"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "s = pd.Series({'Matemáticas': 6.0,  'Economía': 4.5, 'Programación': 8.5})\n",
-    "print(s[s > 5])"
+    "s = pd.Series({'Matemáticas': 6.0,  'Economía': 9.5, 'Programación': 8.5, 'Cálculo': 7}, name = 'Calificaciones Julio')\n",
+    "t = pd.Series({'Matemáticas': 7.5,  'Economía': 6.5, 'Programación': 7.5, 'Cálculo': 9}, name = 'Calificaciones Julio')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(s[s >= t])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(s[s >= t])"
    ]
   },
   {
