--- a/Temas/Tema7_Pandas.ipynb
+++ b/Temas/Tema7_Pandas.ipynb
@@ -719,17 +719,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "¿Hay valores nulos?: True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -780,18 +772,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "¿Todos respondieron 'Sí'?: False\n",
-      "¿Alguien dijo 'No'?: True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "s = pd.Series(['Sí', 'No', 'Sí', 'Sí'])\n",
     "\n",
@@ -863,21 +846,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Primer Parcial      Aprobado\n",
-      "Segundo Parcial     Aprobado\n",
-      "Tercer Parcial      Aprobado\n",
-      "Ordinario          Reprobado\n",
-      "dtype: object\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "s = pd.Series([7, 8.5, 9.2, 4.0], index =['Primer Parcial', 'Segundo Parcial', 'Tercer Parcial', 'Ordinario'] )\n",
     "\n",
@@ -902,21 +873,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0        Ana\n",
-      "1       Juan\n",
-      "2     Carlos\n",
-      "3    Rodolfo\n",
-      "dtype: object\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "nombres = pd.Series(['ana', 'JUAN', 'Carlos', 'RoDolFo'])\n",
     "\n",
@@ -953,21 +912,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Matemáticas     6.0\n",
-      "Economía        9.5\n",
-      "Programación    8.0\n",
-      "Cálculo         7.5\n",
-      "dtype: float64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "s = pd.Series({'Matemáticas': 6.0,  'Economía': 9.5, 'Programación': 8, 'Cálculo': 7.5})\n",
@@ -976,55 +923,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Economía    9.5\n",
-      "dtype: float64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(s[(s > 8) & (s <= 10)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Programación    8.0\n",
-      "dtype: float64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(s[s == 8])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Matemáticas     6.0\n",
-      "Programación    8.0\n",
-      "dtype: float64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(s[s.isin([8,6])])"
    ]
@@ -1099,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1108,20 +1027,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   A\n",
-      "0  1\n",
-      "1  2\n",
-      "2  3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = pd.DataFrame({'A': [1, 2, 3]})\n",
     "print(df)"
@@ -1129,62 +1037,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>A</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   A\n",
-       "0  1\n",
-       "1  2\n",
-       "2  3"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df"
    ]
@@ -1395,21 +1250,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dependiendo del tipo de fichero, existen distintas funciones para importar un DataFrame desde un fichero.\n",
+    "Dependiendo del tipo de fichero, existen distintas funciones para importar un DataFrame desde un fichero. Para cargar un archivo CSV en un `DataFrame`, utilizamos la función:\n",
     "\n",
-    "`read_csv(fichero.csv, sep=separador, header=n, index_col=m, na_values=no-validos, decimal=separador-decimal)` \n",
+    "```python\n",
+    "pd.read_csv('fichero.csv', sep=',', header=0, index_col=None, na_values=None, decimal='.')\n",
+    "```\n",
     "\n",
-    "* Devuelve un objeto del tipo DataFrame con los datos del fichero CSV fichero.csv \n",
+    "- **`fichero.csv`**: nombre o ruta del archivo CSV a importar.\n",
     "\n",
-    "* Se usan como separador de los datos la cadena separador.\n",
-    " \n",
-    "* Como nombres de columnas se utiliza los valores de la fila n y como nombres de filas los valores de la columna m.\n",
-    "  \n",
-    "*  Si no se indica m se utilizan como nombres de filas los enteros empezando en 0.\n",
-    "  \n",
-    "* Los valores incluídos en la lista no-validos se convierten en `NaN`.\n",
-    "  \n",
-    "* Para los datos numéricos se utiliza como separador de decimales el carácter indicado en `separador-decimal`."
+    "- **`sep`**: especifica el carácter separador de columnas (por defecto es `','`, pero puede ser `';'`, `'\\t'`, etc.).\n",
+    "\n",
+    "- **`header=n`**: indica que la fila número `n` (comenzando desde 0) contiene los nombres de las columnas.\n",
+    "\n",
+    "- **`index_col=m`**: usa la columna número `m` como índice del `DataFrame`. Si no se indica, se usa un índice entero por defecto (`0, 1, 2,…`).\n",
+    "\n",
+    "- **`na_values`**: una lista o conjunto de cadenas que deben interpretarse como valores faltantes (`NaN`).\n",
+    "\n",
+    "- **`decimal`**: define el carácter que se usará como separador decimal en los datos numéricos (por ejemplo, `'.'` o `','`)."
    ]
   },
   {
@@ -1417,13 +1274,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`read_excel(fichero.xlsx, sheet_name=hoja, header=n, index_col=m, na_values=no-validos, decimal=separador-decimal)`\n",
+    "### Uso de `read_excel()` para importar archivos de Excel\n",
     "\n",
-    "* Devuelve un objeto del tipo `DataFrame` con los datos de la hoja de cálculo hoja del fichero Excel `fichero.xlsx`. \n",
-    "  \n",
-    "* Como nombres de columnas se utiliza los valores de la fila n y como nombres de filas los valores de la columna m.\n",
-    "  \n",
-    "* Si no se indica m se utilizan como nombres de filas los enteros empezando en 0. Los valores incluídos en la lista no-validos se convierten en NaN. Para los datos numéricos se utiliza como separador de decimales el carácter indicado en separador-decimal."
+    "```python\n",
+    "pd.read_excel(fichero.xlsx, sheet_name=hoja, header=n, index_col=m, na_values=no_validos, decimal=separador_decimal)\n",
+    "```\n",
+    "\n",
+    "- **`fichero.xlsx`**: nombre o ruta del archivo Excel desde el cual se importarán los datos.\n",
+    "\n",
+    "- **`sheet_name`**: nombre o número de la hoja que se desea importar. Puede ser un nombre como `'Hoja1'` o un índice entero como `0`.\n",
+    "\n",
+    "- **`header=n`**: indica que la fila número `n` (comenzando desde 0) contiene los nombres de las columnas. Si se omite, se usa la primera fila (`header=0`) por defecto.\n",
+    "\n",
+    "- **`index_col=m`**: especifica que la columna número `m` debe usarse como índice del `DataFrame`. Si no se indica, se usará un índice numérico por defecto (`0, 1, 2, ...`).\n",
+    "\n",
+    "- **`na_values`**: una lista, conjunto o diccionario con cadenas que deben interpretarse como valores faltantes (`NaN`). Por ejemplo: `na_values=['-', 'n/a', '']`.\n",
+    "\n",
+    "- **`decimal`**: define el carácter que se usará como separador decimal en los valores numéricos. Por defecto es `'.'`, pero puede cambiarse a `','` si se trabaja con formatos europeos.\n"
    ]
   },
   {
@@ -1680,6 +1547,78 @@
     "</table>\n",
     "\n",
     "</center>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style type=\"text/css\">\n",
+       "#T_8852a_row0_col0, #T_8852a_row1_col2, #T_8852a_row2_col1 {\n",
+       "  background-color: salmon;\n",
+       "}\n",
+       "</style>\n",
+       "<table id=\"T_8852a\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th class=\"blank level0\" >&nbsp;</th>\n",
+       "      <th id=\"T_8852a_level0_col0\" class=\"col_heading level0 col0\" >Producto</th>\n",
+       "      <th id=\"T_8852a_level0_col1\" class=\"col_heading level0 col1\" >Ventas</th>\n",
+       "      <th id=\"T_8852a_level0_col2\" class=\"col_heading level0 col2\" >Ganancia</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th id=\"T_8852a_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_8852a_row0_col0\" class=\"data row0 col0\" >A</td>\n",
+       "      <td id=\"T_8852a_row0_col1\" class=\"data row0 col1\" >120</td>\n",
+       "      <td id=\"T_8852a_row0_col2\" class=\"data row0 col2\" >30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_8852a_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "      <td id=\"T_8852a_row1_col0\" class=\"data row1 col0\" >B</td>\n",
+       "      <td id=\"T_8852a_row1_col1\" class=\"data row1 col1\" >340</td>\n",
+       "      <td id=\"T_8852a_row1_col2\" class=\"data row1 col2\" >-50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_8852a_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
+       "      <td id=\"T_8852a_row2_col0\" class=\"data row2 col0\" >C</td>\n",
+       "      <td id=\"T_8852a_row2_col1\" class=\"data row2 col1\" >80</td>\n",
+       "      <td id=\"T_8852a_row2_col2\" class=\"data row2 col2\" >10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n"
+      ],
+      "text/plain": [
+       "<pandas.io.formats.style.Styler at 0x7f829679dd30>"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "df = pd.DataFrame({\n",
+    "    'Producto': ['A', 'B', 'C'],\n",
+    "    'Ventas': [120, 340, 80],\n",
+    "    'Ganancia': [30, -50, 10]\n",
+    "})\n",
+    "\n",
+    "\n",
+    "df.style.highlight_max(axis=0, color='lightgreen') \n",
+    "df.style.highlight_min(axis=0, color='salmon')\n",
+    "df.style.format({'Ganancia': \"{:+d}\"})\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -1940,16 +1879,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "df = pd.read_csv('./Archivos/colesterol.csv', sep = ';',decimal=',')\n",
-    "\n",
-    "df['diabetes']=pd.Series([False,False,True,False,True])\n",
-    "print(df)"
+    " <center>\n",
+    " <a href=\"../Archivos/colesterol.csv\" target=\"_blank\">Descargar archivo colesterol.csv</a> \n",
+    " </center>"
    ]
   },
   {
@@ -1958,8 +1893,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(df['colesterol'].sum()/12)\n",
-    "print(df['colesterol'].sum()/13)\n",
+    "import pandas as pd\n",
+    "df = pd.read_csv('../Archivos/colesterol.csv', sep = ';',decimal=',')\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random \n",
+    "df['diabetes']=pd.Series([random.choice(['Si', 'No']) for i in range(len(df.index))])\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "print(df['colesterol'].sum()/len(df['colesterol'].dropna()))\n",
     "\n",
     "print(df['colesterol'].mean())\n",
     "\n"
